examples/inProgress/C/tests/shouldFail/twoLocals.c
int main(void){
	int y;
	int y;
	return 0;
}
